BUGFIX: Share button align position fixed. Closes redmine#7.
* Fix alignment between share buttons.
* Add share buttons side to side with title.

--- a/poppurri/static/css/base.css
+++ b/poppurri/static/css/base.css
@@ -12,3 +12,15 @@ footer {
 .text-justify {
   text-align: justify;
 }
+
+.float-left {
+  float: left;
+}
+
+.inline-block {
+  display: inline-block; 
+}
+
+.share {
+    padding: 0 5px;
+}
