--- a/poppurri/static/css/mixture.css
+++ b/poppurri/static/css/mixture.css
@@ -7,5 +7,15 @@
 }
 
 .slim-breadcrumb {
-  margin: 0px;
+  margin: 0;
+}
+
+.share-header {
+    margin-left: 50px;
+    margin-bottom: -5px;
+    padding: 0 5px;
+}
+
+.margin-top5 {
+  margin-top: 5px;
 }
